安装sass-loader,node-sass; 安装vant-weapp组件库；注意安装步骤；且在安装过程中都有报错，注意处理方法

--- a/src/app.json
+++ b/src/app.json
@@ -5,7 +5,10 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "童乐读书会",
+    "navigationBarTitleText": "童乐读书官网",
     "navigationBarTextStyle": "black"
+  },
+  "usingComponents": {
+    "van-button": "/vant-weapp/dist/button/index"
   }
 }
