--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "flyio": "^0.6.14",
     "mpvue": "^2.0.0",
+    "mpvue-router-patch": "^2.0.0",
     "vant-weapp": "^0.5.25",
     "vuex": "^3.0.1"
   },
