1、引入icon组件；2、新增searchBar组件；3、遇到引用子组件不显示的问题

--- a/src/app.json
+++ b/src/app.json
@@ -5,10 +5,11 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "童乐读书官网",
+    "navigationBarTitleText": "书网",
     "navigationBarTextStyle": "black"
   },
   "usingComponents": {
-    "van-button": "/vant-weapp/dist/button/index"
+    "van-button": "/vant-weapp/dist/button/index",
+    "van-icon": "/vant-weapp/dist/icon/index"
   }
 }
